# codeql-db-extractor

./: .gitignore  README.md  codeql-to-souffle.py
assets/souffle-predicates/: predicate.cpp.dl
decoder/: README.md  bqrs-decoder.py  csv-to-souffle.py  csv-to-sqlite.py  sqlite-to-csv.py
extractor/: README.md  bqrs_extractor.py  db-extractor.py  ql-generator.py
extractor/cpp-ql-extractor/: extractor.ql  qlpack.yml
extractor/dbfiles/: semmlecode.cpp.json
extractor/java-ql-extractor/: extractor.ql  qlpack.yml
semmle-helper/: AGENT_GUIDE.md  dune-project  semmle-helper.opam
semmle-helper/lib/: cli.ml  dune  lexer.ml  logger.ml  parser.ml  table.ml
semmlecode-parser/: .ocamlformat  AGENT_GUIDE.md  dune-project  semmlecode-parser.opam
semmlecode-parser/lib/: cli.ml  dune  json_serializer.ml  lexer.ml  logger.ml  parser.ml  table.ml
semmlecode-parser/test/: dune
test/cpp/: test.cc
