(lang dune 3.20)

(name semmlecode-parser)

(generate_opam_files true)

(source
 (github gowaylee/codeql-db-extractor))

(authors "Haoyuan Li <lihaoyuan0506@gmail.com>")

(maintainers "Haoyuan Li <lihaoyuan0506@gmail.com>")

(license MIT)

(documentation https://github.com/gowaylee/codeql-db-extractor)

(package
 (name semmlecode-parser)
 (synopsis "A Parser for semmlecode")
 (description "A parser parsing semmlecode.dbscheme to json")
 (depends ocaml angstrom yojson)
 (tags
  ("CodeQL" "semmle" "dbscheme")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
